--- a/src/app/view/manageagency/manageagency.component.html
+++ b/src/app/view/manageagency/manageagency.component.html
@@ -214,7 +214,7 @@
             <div class="modal-header" class="card-header">
               <h5 class="modal-title" id="addItemModalLabel"
                 style="color: rgb(0, 0, 0); font-family: 'Sarabun', sans-serif !important; font-size: 18px; font-weight: 900;">
-                เพิ่มข้อมูลหน่วยงาน</h5>
+                แก้ไขข้อมูลหน่วยงาน</h5>
 
               <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color: black;">
                 <span aria-hidden="true">&times;</span>
