--- a/src/app/view/thaicounty/thaicounty.component.html
+++ b/src/app/view/thaicounty/thaicounty.component.html
@@ -15,11 +15,11 @@
 
 
     <div class="card-body">
-      <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
+      <!-- <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
         <thead>
           <tr>
             <th>จังหวัด</th>
-            <!-- <th>จำนวนหน่วยงาน</th> -->
+    
             <th>จำนวนเอกสาร</th>
             <th>จำนวนเอกสารที่ลงนามแล้ว</th>
             <th>เปอร์เซ็นต์</th>
@@ -33,7 +33,31 @@
             <td>{{ province.percentage | number:'1.0-2' }}%</td>
           </tr>
         </tbody>
+      </table> -->
+
+      <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
+        <thead>
+          <tr>
+            <th>จังหวัด</th>
+            <th>จำนวนหน่วยงาน</th>
+            <th>จำนวนเอกสาร</th>
+            <th>จำนวนเอกสารที่ลงนามแล้ว</th>
+            <th>จำนวนเอกสารดำเนินงาน</th>
+            <th>เปอร์เซ็นต์</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let province of groupProvincesData">
+            <td>{{ province?.provinceName }}</td>
+            <td>{{province?.agenciesCount}}</td>
+            <td>{{ province?.documentCount }}</td>
+            <td>{{ province?.signedCount }}</td>
+            <td>{{ province?.onProcessCount }}</td>
+            <td>{{ province.percentage | number:'1.0-2' }}%</td>
+          </tr>
+        </tbody>
       </table>
+
     </div>
   </div>
    
