--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo">
-  <a href="https://www.ntplc.co.th/" class="simple-text">
+  <a href=" " class="simple-text">
     <div class="logo-img">
-      <img src="/assets/img/nt_logo.png" />
+      <img src=" " />
     </div>
   </a>
 </div>
