--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -81,7 +81,7 @@
                 <i  *ngIf="item?.record?.status === '0'" class="fa-regular fa-circle-xmark cancleIcon"> &nbsp;
                   <div style="font-family: 'Sarabun',sans-serif;">ยังไม่ได้เซ็น</div>
                 </i>
-                <i  *ngIf="item?.record?.status === '2'" class="fa-regular fa-circle-exclamation waitingIcon"> &nbsp;
+                <i  *ngIf="item?.record?.status === '2'" class="fa-regular fa-circle-dot waitingIcon"> &nbsp;
                   <div style="font-family: 'Sarabun',sans-serif;">เซ็นไม่ครบ</div>
                 </i>
               </td>
