--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -8,12 +8,12 @@
             <div class="col-md-3 filter-item">
               <h4>กรองข้อมูล</h4>
               <div class="dropdown">
-                <span class="filter-box" style="font-size: 14px; align-items: center; "  *ngIf="isAdmin">{{ getProvinceName(AgencyData?.province) }}</span>
+                <span class="filter-box" style="font-size: 14px; align-items: center;"  *ngIf="isAdmin">{{ getProvinceName(AgencyData?.province) }}</span>
                 <div *ngIf="!isAdmin" class="filter-box" style="font-size: 14px;" (click)="toggleDropdown('province',$event)">
                   เลือกจังหวัด
-                  <span class="fa fa-chevron-down" [class.animate]="isProvinceDropdownOpen"
+                  <span class="fa fa-chevron-down icon-fa" [class.animate]="isProvinceDropdownOpen"
                     *ngIf="isProvinceDropdownOpen"></span>
-                  <span class="fa fa-chevron-up" [class.animate]="!isProvinceDropdownOpen"
+                  <span class="fa fa-chevron-up icon-fa" [class.animate]="!isProvinceDropdownOpen"
                     *ngIf="!isProvinceDropdownOpen"></span>
                 </div>
 
