--- a/src/app/view/manageperson/manageperson.component.html
+++ b/src/app/view/manageperson/manageperson.component.html
@@ -2,14 +2,14 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
-        <li class="breadcrumb-item active"><a aria-current="page"> จัดการบุคลลกร</a></li>
+        <li class="breadcrumb-item active"><a aria-current="page"> จัดการบุคคลกรในหน่วยงาน</a></li>
       </ol>
     </nav>
     <div class="container-fluid">
       <div class="card">
         <div class="card-header">
             <div class="card-title">
-                <p>  จัดการบุคลลกร</p>
+                <p>  จัดการบุคคลกรในหน่วยงาน</p>
             </div>
             <button (click)="openAddPersonModal()" class="btn btn-add">
               เพิ่มผู้ใช้งาน</button>
